[package]
name = "bonka"
version = "0.1.0"
edition = "2024"
authors = ["Zack Kollar (SeedyROM)"]

[dependencies]
clap = { version = "4.5.34", features = ["derive", "env"] }
color-eyre = "0.6.3"
once_cell = "1.21.3"
rand = "0.9.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
sha3 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
serial_test = "3.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[profile.release]
strip = true
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
