[package]
name = "bonka"
version = "0.1.0"
edition = "2024"
authors = ["Zack Kollar (SeedyROM)"]

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.34", features = ["derive", "env"] }
color-eyre = "0.6.3"
dashmap = "6.1.0"
futures = "0.3.31"
once_cell = "1.21.3"
rand = "0.9.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
sha3 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.5.1"
predicates = "3.1.3"
serial_test = "3.2.0"

# Workspace configuration
[lib]
name = "bonka"
path = "src/lib.rs"

[[bin]]
name = "bonka"
path = "src/bin/bonka.rs"

# Benchmarks
[[bench]]
name = "bonka_benchmark"
harness = false

# Lints
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

# Release configuration
[profile.release]
strip = true
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
